Updated structure and added persistent volume storage