@@ -3,16 +3,13 @@
 # Set the directory to this script's current directory
 DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
 cd $DIR
+export TERM="xterm-256color"
+JAR="Tekkit.jar"
 
-# Set values
-TERM="xterm-256color"
+# Cleanup before launch
+rm -f dimensional-anchors.log* >/dev/null 2>&1
+rm -f ForgeModLoader-0.log* >/dev/null 2>&1
+rm -f server.log.* >/dev/null 2>&1
 
-# Check if the server is already running
-if screen -list | grep -q "${SERVER_NAME}"; then
-	echo -e "$(tput bold)$(tput setaf 1)Server is already running!$(tput sgr0)"
-	exit 1
-fi
-
-# Start & Attach
-./start-detatched.sh
-screen -x ${SERVER_NAME}
+# Execute
+exec java -server -Djava.awt.headless=true -XX:ParallelGCThreads=2 -XX:+UseAdaptiveGCBoundary -XX:MaxGCPauseMillis=50 -XX:+CMSIncrementalPacing -XX:+AggressiveOpts -Xms${MEMORY_INIT} -Xmx${MEMORY_MAX} -jar ${DIR}/${JAR} nogui
